Fix navbar overflowing content on mdx

--- a/packages/docs/src/components/FooterBackground/styles.module.css
+++ b/packages/docs/src/components/FooterBackground/styles.module.css
@@ -25,6 +25,10 @@ footer {
   margin-top: 155px;
 }
 
+[class*="mdx-wrapper"] footer {
+  margin-top: 0 !important;
+}
+
 footer {
   margin-top: -155px;
 }
